--- a/app/Gemfile
+++ b/app/Gemfile
@@ -1,10 +1,11 @@
 source 'https://rubygems.org'
 
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.1'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+
+gem "cancan"
+
+gem 'devise'
 
 gem 'mysql'
 # Use SCSS for stylesheets
