--- a/app/Gemfile
+++ b/app/Gemfile
@@ -3,7 +3,15 @@ source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.1'
 
-gem "cancan"
+gem 'chunky_png'
+
+gem 'nokogiri'
+
+gem 'rubyzip'
+
+gem 'rufus-scheduler'
+
+gem 'carrierwave'
 
 gem 'devise'
 
